--- a/src/content/docs/en/ros2-dds.mdx
+++ b/src/content/docs/en/ros2-dds.mdx
@@ -46,7 +46,7 @@ Creating logical networks
 
 <Drawio
     file="dds.drawio"
-    page="1"
+    page="0"
     description="ROS_DOMAIN_ID"
 />
 
@@ -54,7 +54,7 @@ Discovery:
 
 <Drawio
     file="dds.drawio"
-    page="2"
+    page="1"
     description="ROS auto discovery process"
 />
 
@@ -62,6 +62,7 @@ More about `ROS_DOMAIN_ID` in the [official docs](https://docs.ros.org/en/humble
 
 ## External References
 
+- [ROS2 from the Ground Up: Part 6- DDS in ROS2 for Reliable Robotics Communication](https://medium.com/@nullbyte.in/ros2-from-the-ground-up-part-6-dds-in-ros2-for-reliable-robotics-communication-c9f16c3b4cc6)
 - [ROS on DDS - Design ROS](https://design.ros2.org/articles/ros_on_dds.html)
 - [DDS implementations - ROS docs](https://docs.ros.org/en/humble/Installation/DDS-Implementations.html)
 - [DDS - Specification](https://www.omg.org/spec/DDS)
