--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -47,14 +47,24 @@ Types groups:
 - void type
 - null pointer
 
+Variables initialization:
+- [Default initialization](https://en.cppreference.com/w/cpp/language/default_initialization): Just declaration
+- [Copy initialization](https://en.cppreference.com/w/cpp/language/copy_initialization)
+- [Aggregate initialization](https://en.cppreference.com/w/cpp/language/aggregate_initialization)
+- [Direct initialization](ttps://en.cppreference.com/w/cpp/language/direct_initialization)
+
+More about [initialization](https://en.cppreference.com/w/cpp/language/initialization)
+
 [variables demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/var.cpp)
 
+{/*
 <CodeBlock
-    filename="var.cpp" 
-    code="" 
-    lang="cpp"
-    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/var.cpp"
+filename="var.cpp" 
+code="" 
+lang="cpp"
+remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/var.cpp"
 />
+*/}
 
 More details on variables check [Variables and types - Fundamental data types](https://cplusplus.com/doc/tutorial/variables/#fundamental)
 
@@ -66,12 +76,14 @@ More details on variables check [Variables and types - Fundamental data types](h
 - else if
 - switch
 
+{/*
 <CodeBlock
-    filename="conditions.cpp" 
-    code="" 
-    lang="cpp"
-    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/conditions.cpp"
+filename="conditions.cpp" 
+code="" 
+lang="cpp"
+remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/conditions.cpp"
 />
+*/}
 
 More details on conditions and flow check [Statements and flow control](https://cplusplus.com/doc/tutorial/control/)
 
@@ -84,12 +96,14 @@ More details on conditions and flow check [Statements and flow control](https://
 - for-each (with type deduction)
 - break
 
+{/*
 <CodeBlock
-    filename="conditions.cpp"
-    code="" 
-    lang="cpp"
-    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/loops.cpp"
+filename="conditions.cpp"
+code="" 
+lang="cpp"
+remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/loops.cpp"
 />
+*/}
 
 ## Functions
 
@@ -103,27 +117,33 @@ Topics:
     - `const`
     - default values
 - functions overload
+- return values
 - scopes
 
 [functions demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/functions.cpp)
 
+{/*
 <CodeBlock
 filename="functions.cpp"
 code="" 
 lang="cpp"
 remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/functions.cpp"
 />
+*/}
+
 
 ## Structs
 
 [structs demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/structs.cpp)
 
+{/*
 <CodeBlock
-    filename="structs.cpp"
-    code="" 
-    lang="cpp"
-    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/structs.cpp"
+filename="structs.cpp"
+code="" 
+lang="cpp"
+remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/structs.cpp"
 />
+*/}
 
 ## Classes
 
