--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -108,6 +108,7 @@ remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-bas
 ## Functions
 
 Topics:
+- scopes
 - functions with no type returned.
 - functions declaration and function definition (actual implementation).
 - functions with type returned.
@@ -116,9 +117,9 @@ Topics:
     - by reference
     - `const`
     - default values
-- functions overload
 - return values
-- scopes
+- functions overload
+- function templates
 
 [functions demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/functions.cpp)
 
@@ -131,8 +132,26 @@ remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-bas
 />
 */}
 
+More details on [Functions](https://cplusplus.com/doc/tutorial/functions2/).
+
+## Name Visibility
+
+Topics:
+- Scopes
+- Namespaces
+- Namespaces aliasing
+- `using`
+- The std namespace
+- Storage classes
+
+More on [Name visibility](https://cplusplus.com/doc/tutorial/namespaces/).
 
 ## Structs
+
+Topics:
+- definition
+- nesting
+- struct pointers (in pointers section)
 
 [structs demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/structs.cpp)
 
@@ -144,6 +163,21 @@ lang="cpp"
 remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/structs.cpp"
 />
 */}
+
+More on [Data structures](https://cplusplus.com/doc/tutorial/structures/).
+
+## Others Data Types
+
+Topics:
+- type aliases (`typedef` and `using`)
+- emuns
+- unions
+
+<Drawio
+    file="cpp.drawio"
+    page="2"
+    description="memory layout of a union."
+/>
 
 ## Classes
 
@@ -159,3 +193,24 @@ Topics:
     - uniform initialization
 
 More about classes in [Classes I](https://cplusplus.com/doc/tutorial/classes/)
+
+## Inheritance
+
+## Pointers
+
+<Important
+    note="Don't be afraid."
+/>
+
+Topics:
+- address-of operator
+- dereferences operator
+- declaring pointers
+- pointers and arrays
+- pointers initialization
+- pointers arithmetics
+- pointers const
+- pointers string literals
+- void pointers
+- invalid pointers and null pointers
+- pointers to functions
