add link demo for union

--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -173,11 +173,14 @@ Topics:
 - emuns
 - unions
 
+[other types demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/others.cpp)
+
 <Drawio
     file="cpp.drawio"
     page="2"
     description="memory layout of a union."
 />
+
 
 ## Classes
 
