add topic diagram

--- a/src/content/docs/en/ros2-interfaces.mdx
+++ b/src/content/docs/en/ros2-interfaces.mdx
@@ -44,6 +44,12 @@ Topics are:
 - Anonymous
 - Strongly-typed
 
+<Drawio
+    file="ros.drawio"
+    page="6"
+    description="Simple Topic-based interface."
+/>
+
 ## Anonymous
 
 ## Strongly-typed
