--- a/src/content/docs/en/cpp-stl.mdx
+++ b/src/content/docs/en/cpp-stl.mdx
@@ -1,5 +1,5 @@
 ---
-title: "C++ Standard Library (STD)"
+title: "C++ Standard Library (STL)"
 draft: true
 ---
 
@@ -9,6 +9,8 @@ export const components = {
     blockquote: Blockquote,
     a: A,
     pre: Pre,
+    pre: InlineCode,
+    code: _CodeBlock,
     em: Em,
     h1: H1,
     h2: H2,
@@ -48,11 +50,24 @@ Unordered containers (hash table):
 
 ## Array
 
+<Drawio
+    file="cpp-stl.drawio"
+    page="0"
+    description="STL containers iterators."
+/>
+
+<CodeBlock
+filename="array.cpp"
+code="" 
+lang="cpp"
+remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/003-stl/array.cpp"
+/>
+
 [C++ reference for array](https://en.cppreference.com/w/cpp/container/array)
 
 ## Vector
 
-```
+```plain
 #include <vector>
 ```
 
@@ -63,8 +78,8 @@ Dynamical array. continuous memory allocation.
 
 {/*
 <CodeBlock
-filename="vector.cpp" 
-code="" 
+filename="vector.cpp"
+code=""
 lang="cpp"
 remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/003-stl/vector.cpp"
 />
