add more containers

--- a/src/content/docs/en/cpp-stl.mdx
+++ b/src/content/docs/en/cpp-stl.mdx
@@ -115,3 +115,19 @@ The complexity (efficiency) of common operations on deques is as follows:
     page="2"
     description="Deque container memory layout."
 />
+
+## List
+
+<Drawio
+    file="cpp-stl.drawio"
+    page="3"
+    description="List container memory layout."
+/>
+
+## Forward-list
+
+<Drawio
+    file="cpp-stl.drawio"
+    page="4"
+    description="Forward-list container memory layout."
+/>
