--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -89,14 +89,16 @@ ROS is a collection of "things":
 
 ### Plumbing
 
-- Execution models
+Execution models:
     - Iterative execution
     - Event-oriented execution
-- Communication paradigms
+
+Communication paradigms:
     - Publication/Subscription (asynchronous)
     - Services (synchronous)
     - Actions (asynchronous)
-- Drivers
+
+Drivers availability.
 
 ### Tools
 
