--- a/src/content/docs/en/ros2-nodes.mdx
+++ b/src/content/docs/en/ros2-nodes.mdx
@@ -95,7 +95,7 @@ entry_points={
 
 You can run ROS nodes using the ROS `cli` with the following format:
 ```plain
-ros2 run <package_name> <node_name>
+ros2 run <package_name> <node_entry_point_name>
 ```
 
 In this case:
