update basis functions

--- a/src/content/docs/en/dl-004.mdx
+++ b/src/content/docs/en/dl-004.mdx
@@ -54,6 +54,13 @@ export const components = {
 
 ### Basis Functions
 
+<Drawio
+    file="deep-learning-004.drawio"
+    page="0"
+    description="Basis functions."
+/>
+
+
 ## References
 
 Book:
